--- a/daw.webapp12/src/main/resources/templates/signUp.html
+++ b/daw.webapp12/src/main/resources/templates/signUp.html
@@ -17,18 +17,23 @@
         <div id="formContent">
             
           <!-- Sign Up Form -->
-          <form>
+          <form  method="POST" action="singUp">
             <h3>Sign Up</h3>
-            <input type="text" id="emailAddress" class="fadeIn second" name="emailAddress" placeholder="Email Address">
+            <input type="text" id="emailAddress" class="fadeIn second" name="email" placeholder="Email Address">
             <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
-            <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">            
+            <input type="password" id="password" class="fadeIn third psswdInput" name="password" placeholder="Password" style="background: #f6f6f6;
+            border: none;
+            border-radius: 4px;
+            width: 88%;
+            height: 40px;
+            font-size: unset;
+            text-align: center;
+            margin:10px;
+            ">            
             <input type="submit" class="fadeIn fourth" value="Sign Up">
           </form>
-    
         </div>
       </div>
-
-</div>
-
-</body>
+    </div>
+  </body>
 </html>
