--- a/uptown/css/login.css
+++ b/uptown/css/login.css
@@ -27,7 +27,16 @@
     color: #cccccc;
   }
   
-  
+  .psswdInput{
+    background: #f6f6f6;
+    border: none;
+    border-radius: 4px;
+    width: 88%;
+    height: 40px;
+    font-size: unset;
+    text-align: center;
+
+  }
   
   /* STRUCTURE */
   
