--- a/daw.webapp12/src/main/resources/templates/property-upload.html
+++ b/daw.webapp12/src/main/resources/templates/property-upload.html
@@ -30,9 +30,9 @@
             <h3 class="botonDesp1">Tipo de vivienda:</h3>
             <select class="botonDesp" name="property" id="property"
                     value="{{#advertisement.property}}{{advertisement.property}}{{/advertisement.property}}">
-                <option value="piso">Piso</option>
-                <option value="casa">Casa</option>
-                <option value="local">Local</option>
+                <option value="Piso">Piso</option>
+                <option value="Casa">Casa</option>
+                <option value="Local">Local</option>
             </select>
             <h3 class="botonDesp1">Nº de habitaciones:</h3>
             <select class="botonDesp" name="rooms" id="rooms"
