--- a/daw.webapp12/src/main/resources/templates/signUp.html
+++ b/daw.webapp12/src/main/resources/templates/signUp.html
@@ -17,7 +17,7 @@
         <div id="formContent">
             
           <!-- Sign Up Form -->
-          <form  method="POST" action="singUp">
+          <form  method="POST" action="signUp" >
             <h3>Sign Up</h3>
             <input type="text" id="emailAddress" class="fadeIn second" name="email" placeholder="Email Address">
             <input type="text" id="username" class="fadeIn second" name="username" placeholder="Username">
