--- a/daw.webapp12/src/main/resources/templates/signUp.html
+++ b/daw.webapp12/src/main/resources/templates/signUp.html
@@ -29,7 +29,8 @@
             font-size: unset;
             text-align: center;
             margin:10px;
-            ">            
+            ">
+            <input type="hidden" name="_csrf" value="{{token}}"/>         
             <input type="submit" class="fadeIn fourth" value="Sign Up">
           </form>
         </div>
