Deleting a User favourite avertisements fully working

--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -29,9 +29,9 @@
         					<li><span class="flaticon-bathtub"></span>{{bathrooms}}</li>
         					<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
         				</ul>
-        				<h3><a href="properties-single.html">{{property}} en {{location}}</a></h3>
+        				<h3><a>{{property}} en {{location}}</a></h3>
         				<span class="location">{{location}}</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom" id ="deleteFavouriteButton" href="/deleteAdvertisement/{{id}}">
+        				<a class="d-flex align-items-center justify-content-center btn-custom" id ="deleteFavouriteButton" href="deleteFromFavourites/{{id}}">
         					<span class="icon-star-o"></span>
         				</a>
         			</div>
