--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -18,7 +18,7 @@
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row">
-				{{#Favourites}}
+				{{#myAds}}
 				<div class="col-md-4">
 					<div class="property-wrap ftco-animate">
 						<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
@@ -29,17 +29,17 @@
 								<li><span class="flaticon-bathtub"></span>{{bathrooms}}</li>
 								<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
 							</ul>
-							<h3><a href="properties-single.html">The Blue Sky Home</a></h3>
+							<h3><a>{{property}} en {{location}}</a></h3>
 							<span class="location">{{location}}</span>
-							<button class="d-flex align-items-center justify-content-center btn-custom-edit">
+							<button class="d-flex align-items-center justify-content-center btn-custom-edit" id ="deleteAdvertisementButton" href="deleteMyAdvertisement/{{id}}" >
 								<span class="icon-trash"></span>
 							</a>
-							<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="http://127.0.0.1:5500/uptown/property-upload.html">
+							<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a>
 								<span class="icon-edit"></span>
 							</button>
 						</div>
 					</div>
-				{{/Favourites}}
+				{{/myAds}}
 			</div>
 		</div>
 	</section>
