--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -31,9 +31,11 @@
 							</ul>
 							<h3><a>{{property}} en {{location}}</a></h3>
 							<span class="location">{{location}}</span>
-							<button class="d-flex align-items-center justify-content-center btn-custom-edit" id ="deleteAdvertisementButton" href="deleteMyAdvertisement/{{id}}" >
+
+							<a class="btn d-flex align-items-center justify-content-center btn-custom-edit" id ="deleteFavouriteButton" href="deleteMyAdvertisement/{{id}}">
 								<span class="icon-trash"></span>
 							</a>
+						
 							<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a>
 								<span class="icon-edit"></span>
 							</button>
