--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -21,7 +21,7 @@
 				{{#myAds}}
 				<div class="col-md-4">
 					<div class="property-wrap ftco-animate">
-						<a href="properties-single.html" class="img" style="background-image: url(images/work-1.jpg);"></a>
+						<a href="properties/{{id}}" class="img" style="background-image: url(images/work-1.jpg);"></a>
 						<div class="text">
 							<p class="price"><span class="old-price">{{price}}</span><span class="orig-price">{{price}}<small>/mo</small></span></p>
 							<ul class="property_list">
@@ -35,8 +35,7 @@
 							<a class="btn d-flex align-items-center justify-content-center btn-custom-edit" id ="deleteFavouriteButton" href="deleteMyAdvertisement/{{id}}">
 								<span class="icon-trash"></span>
 							</a>
-						
-							<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a>
+							<button class="d-flex align-items-center justify-content-center btn-custom-edit2"><a href="editProperties/{{id}}">
 								<span class="icon-edit"></span>
 							</button>
 						</div>
