--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -78,61 +78,26 @@
           </div>
         </div>
         <div class="row">
+			{{#recommendedAds}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
         			<a href="#" class="img" style="background-image: url(images/work-1.jpg);"></a>
         			<div class="text">
-        				<p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small>/mo</small></span></p>
+        				<p class="price"><span class="old-price">{{price}}</span><span class="orig-price">{{price}}<small>/mo</small></span></p>
         				<ul class="property_list">
-        					<li><span class="flaticon-bed"></span>3</li>
-        					<li><span class="flaticon-bathtub"></span>2</li>
-        					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
+        					<li><span class="flaticon-bed"></span>{{rooms}}</li>
+        					<li><span class="flaticon-bathtub"></span>{{bathrooms}}</li>
+        					<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
         				</ul>
-        				<h3><a href="#">The Blue Sky Home</a></h3>
-        				<span class="location">Oakland</span>
+        				<h3><a href="#">{{property}} en {{location}}</a></h3>
+        				<span class="location">{{location}}</span>
         				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
         				</a>
         			</div>
         		</div>
-        	</div>
-        	<div class="col-md-4">
-        		<div class="property-wrap ftco-animate">
-        			<a href="#" class="img" style="background-image: url(images/work-2.jpg);"></a>
-        			<div class="text">
-        				<p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small>/mo</small></span></p>
-        				<ul class="property_list">
-        					<li><span class="flaticon-bed"></span>3</li>
-        					<li><span class="flaticon-bathtub"></span>2</li>
-        					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
-        				</ul>
-        				<h3><a href="#">The Blue Sky Home</a></h3>
-        				<span class="location">Oakland</span>
-        				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="icon-star-o"></span>
-        				</a>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4">
-        		<div class="property-wrap ftco-animate">
-        			<a href="#" class="img" style="background-image: url(images/work-3.jpg);"></a>
-        			<div class="text">
-        				<p class="price"><span class="old-price">800,000</span><span class="orig-price">$3,050<small>/mo</small></span></p>
-        				<ul class="property_list">
-        					<li><span class="flaticon-bed"></span>3</li>
-        					<li><span class="flaticon-bathtub"></span>2</li>
-        					<li><span class="flaticon-floor-plan"></span>1,878 sqft</li>
-        				</ul>
-        				<h3><a href="#">The Blue Sky Home</a></h3>
-        				<span class="location">Oakland</span>
-        				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
-        					<span class="icon-star-o"></span>
-        				</a>
-        			</div>
-        		</div>
-        	</div>
-        </div>
+			</div>
+			{{/recommendedAds}}
     	</div>
     </section>	 
 
