--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -21,12 +21,12 @@
                       <a class="filter">Busqueda de:</a>
                         <select name= "searchType" class="selectInput"> 
                           <option value="Alquiler">Alquiler</option>
-                          <option value="Compra">Compra</option>
+                          <option value="Venta">Venta</option>
                         </select>
                         <a class="filter">Tipo de propiedad:</a>
                         <select name= "propertyType" class="selectInput"> 
                           <option value="Casa">Casa</option>
-                          <option value="Apartamento">Apartamento</option>
+                          <option value="Piso">Piso</option>
                           <option value="Local">Local</option>
                         </select>
                         <label class="filter">Metros Cuadrados:</label>
@@ -48,7 +48,7 @@
                         </select>
                       
                         <label class="filter" >Precio:</label>
-                        <input class="numberInput" value="1000"  name= "price" type="number" min="10000" max="5000000">
+                        <input class="numberInput" value="1000"  name= "price" type="number" max="5000000">
                         
                       </div>
 				                <input type="text" name = "location" class="form-control search" placeholder="Introduce una zona">
