--- a/daw.webapp12/src/main/resources/templates/property-upload.html
+++ b/daw.webapp12/src/main/resources/templates/property-upload.html
@@ -24,8 +24,8 @@
             <h3 class="botonDesp1">Tipo de anuncio:</h3>
             <select class="botonDesp" name="type" id="type"
                     value="{{#advertisement.type}}{{advertisement.type}}{{/advertisement.type}}">
-                <option value="venta">Venta</option>
-                <option value="alquiler">Alquiler</option>
+                <option value="Venta">Venta</option>
+                <option value="Alquiler">Alquiler</option>
             </select>
             <h3 class="botonDesp1">Tipo de vivienda:</h3>
             <select class="botonDesp" name="property" id="property"
