--- a/daw.webapp12/src/main/resources/templates/properties-modificar.html
+++ b/daw.webapp12/src/main/resources/templates/properties-modificar.html
@@ -21,7 +21,9 @@
 				{{#myAds}}
 				<div class="col-md-4">
 					<div class="property-wrap ftco-animate">
-						<a href="properties/{{id}}" class="img" style="background-image: url(images/work-1.jpg);"></a>
+						
+						<a href="properties/{{id}}" class="img" style="background-image: url(images/{{images.0}});"></a>
+						
 						<div class="text">
 							<p class="price"><span class="old-price">{{price}}</span><span class="orig-price">{{price}}<small>/mo</small></span></p>
 							<ul class="property_list">
@@ -40,6 +42,7 @@
 							</button>
 						</div>
 					</div>
+				</div>
 				{{/myAds}}
 			</div>
 		</div>
