--- a/daw.webapp12/src/main/resources/templates/properties-single.html
+++ b/daw.webapp12/src/main/resources/templates/properties-single.html
@@ -19,13 +19,16 @@
     	<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-12">
+					{{#Property}}
+
 					<div class="property-details">
+						{{#images}}
 						<div class="row">
-							<div class="img" style="background-image: url(/../images/work-1.jpg);"></div>
-							<div class="img" style="background-image: url(/../images/image_6.jpg);"></div>
-							<div class="img" style="background-image: url(/../images/image_5.jpg);"></div>
+							<div class="img" style="background-image: url(images/{{.}});"></div>
 						</div>
-						<div class="row">	
+						{{/images}}
+
+						<div class="row">
 						<div class="img" style="background-image: url(/../images/image_4.jpg);"></div>
 						<div class="img" style="background-image: url(/../images/image_3.jpg);"></div>
 						<div class="img" style="background-image: url(/../images/image_2.jpg);"></div>
@@ -33,7 +36,6 @@
 						</div>
 						<div class="text text-center">
 
-						{{#Property}}
 							<span class="subheading">{{type}}</span>
 							<h2>{{property}} en {{location}}</h2>
 						</div>
