Improved recommended advertisements algorithm so it adapts better to the user`s search and small html adjustments

--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
         					<li><span class="flaticon-floor-plan"></span>{{squareMeters}}</li>
         				</ul>
         				<h3><a href="#">{{property}} en {{location}}</a></h3>
-        				<span class="location">{{location}}</span>
+        				<span class="location">{{type}}</span>
         				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
         				</a>
