--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -38,6 +38,9 @@
         		</div>
 			</div>
 			{{/Favourites}}
+			{{#Error}}
+				<h2>{{.}}</h2>
+			{{/Error}}
     	</div>
     </section>
     {{>footer}}
