--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -91,7 +91,7 @@
         				</ul>
         				<h3><a href="#">{{property}} en {{location}}</a></h3>
         				<span class="location">{{type}}</span>
-        				<a href="#" class="d-flex align-items-center justify-content-center btn-custom">
+        				<a href="/addFavourite/{{id}}" class="d-flex align-items-center justify-content-center btn-custom">
         					<span class="icon-star-o"></span>
         				</a>
         			</div>
