--- a/daw.webapp12/src/main/resources/templates/properties-search.html
+++ b/daw.webapp12/src/main/resources/templates/properties-search.html
@@ -31,7 +31,7 @@
         				</ul>
         				<h3><a href="properties/{{id}}">{{property}} en {{location}}</a></h3>
         				<span class="location">{{location}}</span>
-        				<a class="d-flex align-items-center justify-content-center btn-custom">
+        				<a class="d-flex align-items-center justify-content-center btn-custom"  href="/addFavourite/{{id}}">
         					<span class="icon-star-o"></span>
         				</a>
         			</div>
