--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -21,7 +21,7 @@
           {{#Favourites}}
         	<div class="col-md-4">
         		<div class="property-wrap ftco-animate">
-        			<a href="properties/{{id}}" class="img" style="background-image: url(images/work-1.jpg);"></a>
+					<a href="properties/{{id}}" class="img" style="background-image: url(images/{{images.0}});"></a>
         			<div class="text">
         				<p class="price"><span class="orig-price">{{price}}<small>$</small></span></p>
         				<ul class="property_list">
