--- a/daw.webapp12/src/main/resources/templates/index.html
+++ b/daw.webapp12/src/main/resources/templates/index.html
@@ -3,8 +3,7 @@
   {{>header}}
     
     <!-- END nav -->
-    
-    <div class="hero-wrap ftco-degree-bg" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+    <div class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-center align-items-center">
