--- a/daw.webapp12/src/main/resources/templates/favs.html
+++ b/daw.webapp12/src/main/resources/templates/favs.html
@@ -28,5 +28,22 @@
               </form>     
             </div>
           </div>
+
+<!--
+
+      <div class="pt-5 mt-5">
+          <h3 class="mb-5">6 Comments</h3>
+          <ul class="comment-list">
+              <li class="comment">
+                  <div class="comment-body">
+                      <h3>{{user.name}}</h3>
+                      <div class="meta">
+                          
+                      </div>
+                      <p>{{user.advertisement[id].comment}}</p>
+                  </div>
+              </li>
+          </ul>
+      </div>-->
     </body>
 </html>
