--- a/daw.webapp12/src/main/resources/templates/header.html
+++ b/daw.webapp12/src/main/resources/templates/header.html
@@ -51,13 +51,18 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="/MainPage" class="nav-link">Home</a></li>
-				<li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
-				<li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
-				<li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
-				<li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-				<li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
-	        </ul>
+            <li class="nav-item"><a href="/MainPage" class="nav-link">Home</a></li>
+            {{#user}}  
+            <li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
+            <li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
+            <li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
+            <li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
+            {{/user}}
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            {{#admin}}
+            <li class="nav-item"><a href="/AllProperties" class="nav-link">Listado de anuncios</a></li>
+            {{/admin}}
+          </ul>
 	      </div>
 	    </div>
 	  </nav>
