--- a/daw.webapp12/src/main/resources/templates/footer.html
+++ b/daw.webapp12/src/main/resources/templates/footer.html
@@ -1,3 +1,9 @@
+<!-- <div id="role">
+  {{#role}}
+  <p id="pRole">{{.}}</p>
+  {{/role}}
+</div> -->
+
 <footer class="ftco-footer ftco-section">
     <div class="container">
         <div class="col-md-12 text-center">
@@ -31,6 +37,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="../js/google-map.js"></script>
   <script src="../js/main.js"></script>
+  <script type="text/javascript" src="../js/navBar.js"></script>
 
 <script src="../js/jquery.min.js"></script>
 <script src="../js/jquery-migrate-3.0.1.min.js"></script>
