--- a/daw.webapp12/src/main/resources/templates/properties-edit.html
+++ b/daw.webapp12/src/main/resources/templates/properties-edit.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>property edit page</title>
-    <link rel="stylesheet" href="css/login.css">
-    <link rel="stylesheet" href="css/propertyUpload.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/propertyUpload.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
