--- a/daw.webapp12/src/main/resources/templates/blog-single.html
+++ b/daw.webapp12/src/main/resources/templates/blog-single.html
@@ -19,13 +19,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 order-md-last ftco-animate">
-            {{#blog}}
+            {{#Blog}}
             <h2 class="mb-3">{{title}}</h2>
             <p>{{text}}</p>
             <p>
               <img src="images/image_7.jpg" alt="" class="img-fluid">
             </p>
-            
+            {{/Blog}}
+
+          </div>
+        </div>
           <!-- .col-md-8 -->
           <div class="col-md-4 sidebar ftco-animate">
             <div class="sidebar-box ftco-animate">
@@ -69,4 +72,5 @@
     </section> <!-- .section -->
 
     {{>footer}}
+  
 </html>
