Added functionality to Create, Delete and Update a Blog, plus created the form`s html for the creation
Updating still needs a little fix because of another existing error

--- a/daw.webapp12/src/main/resources/static/css/style.css
+++ b/daw.webapp12/src/main/resources/static/css/style.css
@@ -9988,6 +9988,15 @@ textarea.form-control {
     visibility: visible;
   }
 
+  #blogMethods #deleteMethod{
+    float: left;
+  }
+
+  #blogMethods #updateMethod{
+    float: left;
+    margin: 6.85px;
+  }
+
 @-webkit-keyframes loader-rotate {
   100% {
     -webkit-transform: rotate(360deg);
