--- a/daw.webapp12/src/main/resources/templates/header.html
+++ b/daw.webapp12/src/main/resources/templates/header.html
@@ -61,6 +61,7 @@
             <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
             {{#admin}}
             <li class="nav-item"><a href="/AllProperties" class="nav-link">Listado de anuncios</a></li>
+            <li class="nav-item"><a href="/new-blog" class="nav-link">Nuevo Blog</a></li>
             {{/admin}}
           </ul>
 	      </div>
