--- a/daw.webapp12/src/main/resources/templates/properties.html
+++ b/daw.webapp12/src/main/resources/templates/properties.html
@@ -38,6 +38,11 @@
         		</div>
 			</div>
 			{{/Favourites}}
+			<form>
+				<button id="LoadMore" type="button" title="LoadMore"><i class="material-icons">add_circle_outline</i> </button>
+				<input type="hidden" name="_csrf" value="{{token}}">
+			</form>
+
 			{{#Error}}
 				<h2>{{.}}</h2>
 			{{/Error}}
