--- a/daw.webapp12/src/main/resources/templates/properties-single.html
+++ b/daw.webapp12/src/main/resources/templates/properties-single.html
@@ -87,10 +87,29 @@
  								width="800" height="650" frameborder="5" style="border:0;" allowfullscreen=""></iframe>
 								 {{/Property}}
 							</div>
+							{{#Comment}}
 							<div class="tab-pane fade" id="pills-review" role="tabpanel" aria-labelledby="pills-review-tab">
-								<p> Si quiere leer las opiniones o poner una reseña tiene que registrarse. </p>
-								<p>Si desea resgistrarse ves a la pestaña "Home" y clicka arriba a la derecha en "Acceso Usuario". </p>
+								<div class="pt-5 mt-5">
+									<h3 class="mb-5"> Comments</h3>
+									<ul class="comment-list">
+										<li class="comment">
+											<div class="comment-body">
+												<h3>Angel</h3>
+												<div class="meta">
+												</div>
+												<p>{{message}}</p>
+											</div>
+										</li>
+									</ul>
+								</div>
 							</div>
+							{{/Comment}}
+							<form action="properties-single" method="post">
+								<input type="text" name="comments" id="comments">
+								<input type="submit">
+								<input type="hidden" name="_csrf" value="{{token}}">
+
+							</form>
 						</div>
 					</div>
 				</div>
