Added individual blog component, added sql query for the algorithm and set the algorithm as a service method

--- a/WebApp12Angular/src/app/blog-list.component.html
+++ b/WebApp12Angular/src/app/blog-list.component.html
@@ -23,7 +23,7 @@
         <div class="col-md-3 d-flex ">
           <div class="blog-entry justify-content-end">
             <div class="text">
-              <h3 class="heading"><a href="#">{{blog.title}}
+              <h3 class="heading"><a [routerLink]="['/blog',blog.id]">{{blog.title}}
                 </a></h3>
               <div class="meta mb-3">
                 <div><a>July. 24, 2019</a></div>
