--- a/WebApp12Angular/src/app/blog-single.component.html
+++ b/WebApp12Angular/src/app/blog-single.component.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-{{>header}}
-<!-- END nav -->
-
-<section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('../images/bg_1.jpg');"
+<section class="hero-wrap hero-wrap-2 ftco-degree-bg js-fullheight" style="background-image: url('assets/bg_1.jpg');"
   data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center">
-      <div class="col-md-9 ftco-animate pb-5 text-center">
+      <div class="col-md-9 pb-5 text-center">
         <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                 class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i
                 class="ion-ios-arrow-forward"></i></a></span> <span>Blog Single <i
@@ -19,24 +14,18 @@
   </div>
 </section>
 
-<section class="ftco-section ftco-degree-bg">
+<section class="ftco-section ftco-degree-bg" style="background-color: white;">
   <div class="container">
     <div class="row">
-      <div class="col-md-8 order-md-last ftco-animate">
-        {{#Blog}}
-        <h2 class="mb-3">{{title}}</h2>
-        <p>{{text}}</p>
+      <div class="col-md-8 order-md-last">
+        <div *ngIf="blog">
+        <h2 class="mb-3">{{blog.title}}</h2>
+        <p>{{blog.text}}</p>
         <p>
           <img src="../images/image_7.jpg" alt="" class="img-fluid">
         </p>
-        {{/Blog}}
-
+      </div>
       </div>
     </div>
-    <!-- .col-md-8 -->
   </div>
-</section> <!-- .section -->
-
-{{>footer}}
-
-</html>
+</section>
