--- a/WebApp12Angular/src/styles.css
+++ b/WebApp12Angular/src/styles.css
@@ -10042,5 +10042,21 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
       stroke-dashoffset: -35px; }
     100% {
       stroke-dasharray: 89, 200;
-      stroke-dashoffset: -136px; } }
+      stroke-dashoffset: -136px; } 
+    }
   
+  .posicion-imagen {
+    overflow: hidden !important;
+    background-size: cover !important;
+    background-position: center !important;
+  }
+
+.boton-trash-favo{
+  position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    background: #f75757;
+    border-radius: 0 50% 0 0;
+}  
