Retrieved overwritten changes

--- a/WebApp12Angular/src/app/header.component.html
+++ b/WebApp12Angular/src/app/header.component.html
@@ -15,7 +15,7 @@
           <li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
           <!-- {{/user}} -->
           <li class="nav-item"><a [routerLink]="['/blog']" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+          <li class="nav-item"><a [routerLink]="['/login']" class="nav-link">Login</a></li>
           <!-- {{#admin}} -->
           <li class="nav-item"><a href="/AllProperties" class="nav-link">Listado de anuncios</a></li>
           <li class="nav-item"><a href="/new-blog" class="nav-link">Nuevo Blog</a></li>
