--- a/WebApp12Angular/src/app/header.component.html
+++ b/WebApp12Angular/src/app/header.component.html
@@ -10,7 +10,7 @@
           <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="/MainPage" class="nav-link">Home</a></li>
           <!-- {{#user}}   -->
-          <li class="nav-item"><a href="/property-upload" class="nav-link">Poner anuncio</a></li>
+          <li class="nav-item"><a [routerLink]="['/propertyUpload']" class="nav-link">Poner anuncio</a></li>
           <li class="nav-item"><a href="/properties" class="nav-link">Mis favoritos</a></li>
           <li class="nav-item"><a href="/properties-modificar" class="nav-link">Mis anuncios</a></li>
           <!-- {{/user}} -->
